[tool.poetry]
name = "meety"
version = "0.1.0"
description = ""
authors = ["Jonas Freiknecht"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.7.0"
numpy = "^1.22.3"
vosk = "^0.3.32"
python-docx = "^0.8.11"
loguru = "^0.6.0"
pydub = "^0.25.1"
spacy = "^3.2.3"
stqdm = "^0.0.4"
webvtt-py = "^0.4.6"
torch = "^1.11.0"
transformers = "^4.17.0"
sentencepiece = "^0.1.96"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
